qsimd_p.h: remove LZCNT feature from the ARCH_HASWELL list

And for good measure, I'm also removing BMI2. The one we really care
about ensuring gets enabled instead of -mavx2 is FMA anyway.

Complements commit 29d3938aa56663f09666a0ac58b33e70e00abff2 (which in
turn complemented commit a98cf15ed1b57aee695de01b04a974637b2cd44a),
which removed BMI1 because AMD introduced it before AVX2. Looks like
they also introduced LZCNT in some earlier processor too (family 10h) or
GCC 12 began emitting __LZCNT__ for that family -- IIRC the AMD feature
list was bigger than just the lzcnt instruction.

Fixes: QTBUG-111698
Change-Id: I7f354474adce419ca6c2fffd1748f5b24f69a692
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 8413824ca00188fa36b6adf46d4a5bddb9515ec7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>